<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editNameCompany"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_hint_name_company"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editGender"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_hint_gender"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNameCompany"
        tools:ignore="VisualLintTextFieldSize" />

<!--    <EditText-->
<!--        android:id="@+id/editBirthday"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/txt_hint_birthday"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtTitle"-->
<!--        tools:ignore="VisualLintTextFieldSize" />-->

<!--    <EditText-->
<!--        android:id="@+id/editCountry"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/txt_hint_country"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtTitle"-->
<!--        tools:ignore="VisualLintTextFieldSize" />-->

<!--   <EditText-->
<!--        android:id="@+id/editState"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/txt_hint_state"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtTitle"-->
<!--        tools:ignore="VisualLintTextFieldSize" />-->

<!--   <EditText-->
<!--        android:id="@+id/editCity"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/txt_hint_city"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtTitle"-->
<!--        tools:ignore="VisualLintTextFieldSize" />-->
<!--    -->
<!--<EditText-->
<!--        android:id="@+id/editBudget"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/txt_hint_budget"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtTitle"-->
<!--        tools:ignore="VisualLintTextFieldSize" />-->


<!--    <EditText-->
<!--        android:id="@+id/editNumberContact"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/txt_hint_number_contact"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtTitle"-->
<!--        tools:ignore="VisualLintTextFieldSize" />-->

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorButton"
        android:text="@string/button_finish"
        app:layout_constraintTop_toBottomOf="@+id/editGender"
        tools:ignore="VisualLintButtonSize"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorButton"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toEndOf="@+id/buttonClean"
        app:layout_constraintTop_toBottomOf="@+id/buttonFinish" />

    <Button
        android:id="@+id/buttonClean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorButton"
        android:importantForAutofill="no"
        android:text="@string/button_clean"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFinish" />

</androidx.constraintlayout.widget.ConstraintLayout>