<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.cadastrar_fornecedor">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Nome do fornecedor"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editSecondName"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Endereço do fornecedor"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <EditText
        android:id="@+id/editCourse"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Email do fornecedor"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSecondName" />

    <EditText
        android:id="@+id/editContact"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Telefone do fornecedor"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourse" />


    <TextView
        android:id="@+id/txtSpinnerList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="sexo do fornecedor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContact" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="411dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/txtSpinnerList"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorButton"
        android:text="Finalizar"
        app:layout_constraintEnd_toStartOf="@+id/btn_salvar"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toEndOf="@+id/btn_limpar"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:background="#EA1748"
        android:text="Voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_limpar"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="126dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorButton"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btn_limpar"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="#EA1748"
        android:importantForAutofill="no"
        android:text="@string/button_clean"
        app:layout_constraintEnd_toStartOf="@+id/btn_salvar"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>